# cep-78-enhanced-nft

./: .gitignore  Makefile
cep78-transfer-session/: Cargo.toml  Makefile
cep78-transfer-session/src/: lib.rs
contract/src/: constants.rs  error.rs  helpers.rs  main.rs  punk.rs  punk_lootbox.rs  utils.rs
factory/: .env  CSP-cep78.js  Makefile
factory/contracts/src/: constants.rs  entry_points.rs  error.rs  events.rs  helpers.rs  main.rs  named_keys.rs
factory/scripts/: CSP-cep78.js  addWhitelist.js  approveNft.js  boxPaymentContracP2.js  changeMinterCSP.js  contractinfo.json  deployFactory.js  getInfoCep78.js  indexCasperPunk.js  mintFactory.js  ownerAction.js  paymentContract.js
factory/tests/: Cargo.toml
factory/tests/src/: lib_integration_tests.rs
payment-contract/: Cargo.toml  Makefile
payment-contract-factory/: Cargo.toml  Makefile
payment-contract-factory/src/: converters.rs  lib.rs
payment-contract/src/: error.rs  lib.rs
redeem-box/: Cargo.toml  Makefile
redeem-box/src/: constants.rs  entry_points.rs  error.rs  events.rs  helpers.rs  main.rs  named_keys.rs
redeem-box/tests/: Cargo.toml
redeem-box/tests/src/: lib_integration_tests.rs
redeem-session/: Cargo.toml  Makefile
redeem-session/src/: lib.rs
scripts/: box-cep78.js  boxCheckRe.js  boxDeploy.js  boxMintBox.js  boxRegisterForMarket.js  boxRegisterForOwner.js  boxSetMinter.js  punkAddWhitelist.js  punkRegister.js  punkUserMint.js
