[package]
name = "mkpl-tests"
version = "0.1.0"
edition = "2018"
authors = ["DotOracle <dotoracle.network@gmail.com>"]

[dependencies]
casper-types = "1.5.0"
casper-engine-test-support = { version = "2.2.0", features = ["test-support"] }
casper-execution-engine = "2.0.1"
once_cell = "1.8.0"
serde = { version = "1", features = ["derive", "alloc"], default-features = false }

[lib]
name = "tests"
bench = false
doctest = false
