[package]
name = "tests"
version = "0.1.0"
edition = "2018"

[dev-dependencies]
casper-contract = { version = "1.4.4", default-features = false, features = ["test-support"] }
casper-engine-test-support = { version = "2.2.0", features = ["test-support"] }
casper-execution-engine = "2.0.1"
casper-types = "1.5.0"
serde = { version = "1", features = ["derive", "alloc"], default-features = false }


[[bin]]
name = "tests"
path = "src/lib.rs"
bench = false
doctest = false

